# table-checkanize

./: README.md  pyproject.toml
table_checkanize/: __main__.py  cli.py
