[tool.poetry]
name = "table-checkanize"
version = "0.1.0"
description = ""
authors = ["gyokuro06 <gyokuro06@gmail.com>"]
readme = "README.md"
packages = [{include = "table_checkanize"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
typer = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
